Base URL update

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1">
-    <title>PVC TL</title>
+    <title>PVC-TL</title>
 
     
     <meta name="keywords" content="novels, bl, chinese translation">
@@ -43,7 +43,7 @@
 
         <div class="home">
             <div class="logo">
-                <h1><a href="/">PVC TL</a></h1>
+                <h1><a href="/">PVC-TL</a></h1>
             </div>
             <div class="navigation">
     
