--- a/public/pin/created-site/index.html
+++ b/public/pin/created-site/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1">
-    <title>Modus Operandi - PVC TL</title>
+    <title>Modus Operandi - PVC-TL</title>
 
     
     <meta name="keywords" content="">
@@ -42,7 +42,7 @@
 
         <div class="home">
             <div class="logo">
-                <h1><a href="/">PVC TL</a></h1>
+                <h1><a href="/">PVC-TL</a></h1>
             </div>
             <div class="navigation">
     
